Page MenuHome GnuPG

gpgme regression (t-json) with GnuPG 2.5.0
Closed, ResolvedPublic

Description

In gpgme, make check fails at t-json.

This is due to the second grip thing added in GnuPG 2.5.0.
When restricted agent connection (gpgme-json uses --request-orign=browser for its gpg invocation), HAVEKEY --list fails.
And with GnuPG 2.5.0, agent_probe_any_secret_key fails because of the second grip.

Revisions and Commits